# who-has-time

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  email.py  grid.py  i18n.py  models.py  poll_form.py  security.py
app/routes/: admin.py  participant.py  public.py
app/static/: admin.js  app.js  date_picker.js  grid.js  style.css
app/templates/: base.html  index.html
app/templates/admin/: dashboard.html  edit.html
app/templates/partials/: how_it_works_content.html  poll_how_it_works_content.html  poll_meta_line.html  poll_settings_fields.html
app/templates/poll/: _grid.html  grid.html
app/translations/: de.json  en.json
